Add Vault sidebar view with token list and vault pull support
New read-only Vault section in the sidebar showing stored tokens
from `dex token list` with name, type, expiry, refresh status, and
created date. No secret values are exposed. Includes Pull Vault
command that prompts for passphrase and uses DEX_VAULT_PASSPHRASE
env var for headless execution. Auto-refreshes on token file changes.

--- a/package.json
+++ b/package.json
@@ -57,6 +57,11 @@
           "type": "tree"
         },
         {
+          "id": "modiqo-vault",
+          "name": "Vault",
+          "type": "tree"
+        },
+        {
           "id": "modiqo-explore",
           "name": "Explore",
           "type": "tree"
@@ -156,6 +161,18 @@
         "icon": "$(graph)"
       },
       {
+        "command": "modiqo.refreshVault",
+        "title": "Refresh Vault",
+        "category": "modiqo",
+        "icon": "$(refresh)"
+      },
+      {
+        "command": "modiqo.vaultPull",
+        "title": "Pull Vault",
+        "category": "modiqo",
+        "icon": "$(cloud-download)"
+      },
+      {
         "command": "modiqo.refreshExplore",
         "title": "Refresh Explore",
         "category": "modiqo",
@@ -204,6 +221,16 @@
         {
           "command": "modiqo.showRegistryOverview",
           "when": "view == modiqo-registry",
+          "group": "navigation"
+        },
+        {
+          "command": "modiqo.refreshVault",
+          "when": "view == modiqo-vault",
+          "group": "navigation"
+        },
+        {
+          "command": "modiqo.vaultPull",
+          "when": "view == modiqo-vault",
           "group": "navigation"
         },
         {
