Add setup wizard with 7-step onboarding flow
Multi-step setup wizard (Welcome → Login → Adapters → Auth → Wire → Verify → Complete) that mirrors the dex CLI setup experience. Includes conditional sidebar visibility, progressive view reveal, adapter installation with flow pulling, OAuth and static token configuration, AI client wiring, and proof-of-life verification with stylized multi-line output. Flows tree now filters to only show flows for installed adapters.

--- a/package.json
+++ b/package.json
@@ -32,43 +32,67 @@
     "views": {
       "modiqo-explorer": [
         {
+          "id": "modiqo-setup",
+          "name": "Setup",
+          "type": "tree"
+        },
+        {
           "id": "modiqo-info",
           "name": "Info",
-          "type": "tree"
+          "type": "tree",
+          "when": "modiqo.dexReady"
         },
         {
           "id": "modiqo-adapters",
           "name": "Adapters",
-          "type": "tree"
+          "type": "tree",
+          "when": "modiqo.dexReady"
         },
         {
           "id": "modiqo-flows",
           "name": "Flows",
-          "type": "tree"
+          "type": "tree",
+          "when": "modiqo.dexReady"
         },
         {
           "id": "modiqo-workspaces",
           "name": "Workspaces",
-          "type": "tree"
+          "type": "tree",
+          "when": "modiqo.dexReady"
         },
         {
           "id": "modiqo-registry",
           "name": "Registry",
-          "type": "tree"
+          "type": "tree",
+          "when": "modiqo.dexReady"
         },
         {
           "id": "modiqo-vault",
           "name": "Vault",
-          "type": "tree"
+          "type": "tree",
+          "when": "modiqo.dexReady"
         },
         {
           "id": "modiqo-explore",
           "name": "Explore",
-          "type": "tree"
+          "type": "tree",
+          "when": "modiqo.dexReady"
         }
       ]
     },
     "commands": [
+      {
+        "command": "modiqo.openSetupWizard",
+        "title": "Open Setup Wizard",
+        "category": "modiqo",
+        "icon": "$(rocket)"
+      },
+      {
+        "command": "modiqo.installDex",
+        "title": "Install dex",
+        "category": "modiqo",
+        "icon": "$(cloud-download)"
+      },
       {
         "command": "modiqo.showReference",
         "title": "Show Reference",
